# sample-netcdf-dispatch

./: Makefile.am  README.md  configure.ac
include/: Makefile.am  abdispatch.h  ablogging.h  hdf4dispatch.h
src/: Makefile.am  hdf4dispatch.c  hdf4file.c
test/: Makefile.am
