## This is a automake file, part of the AB Dispatch layer.

# Ed Hartnett

# This directory stores libtool macros, put there by aclocal.
ACLOCAL_AMFLAGS = -I m4

# These files get added to the distribution.
EXTRA_DIST = README.md 

# This is the list of subdirs for which Makefiles will be constructed
# and run.
SUBDIRS = include src test

