# This is part of the sample netcdf dispatch package, which
# demonstrates the netCDF user-defined format feature.

# Ed Hartnett 6/2/18

AM_CPPFLAGS = -I$(top_srcdir)/include 

# This is our output. 
lib_LTLIBRARIES = libncsample.la
libncsample_la_LDFLAGS = -version-info 1:0:0
libncsample_la_SOURCES = hdf4dispatch.c  hdf4file.c  hdf4func.c  hdf4var.c





