# This is part of the sample netcdf dispatch package, which
# demonstrates the netCDF user-defined format feature.

# Ed Hartnett 6/2/18

AM_CPPFLAGS = -I$(top_srcdir)/include

# Link to our assembled library.
AM_LDFLAGS = ${top_builddir}/src/libncsample.la

# The tests.
# DISPATCH_TESTS = tst_ab_read
# check_PROGRAMS = $(DISPATCH_TESTS)
# TESTS = $(DISPATCH_TESTS)

# The test data files.
#EXTRA_DIST = surtmp_100l.b surtmp_100l.a
